--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "react-router-dom": "^7.6.0"
     },
     "devDependencies": {
+        "@vitejs/plugin-react": "^4.4.1",
         "autoprefixer": "^10.4.0",
         "postcss": "^8.4.0",
         "tailwindcss": "^3.3.0",
